item featured img overflow fix

--- a/less/blocks/item-featured.less
+++ b/less/blocks/item-featured.less
@@ -159,7 +159,7 @@
     right: -100%;
     bottom: 0;
     width: auto;
-    height: 100%;
+    max-height: 100%;
     padding-top: 8px;
   }
 
@@ -170,7 +170,6 @@
     right: 0;
     bottom: 0;
     width: 50%;
-    height: 100%;
     padding-right: 50px;
   }
 }
